tests/ui/type-alias-impl-trait/issue-65384.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `()`
  --> $DIR/issue-65384.rs:10:1
   |
LL | impl MyTrait for () {}
   | ------------------- first implementation here
...
LL | impl MyTrait for Bar {}
   | ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0119`.
